test/compile_errors/err_ephemeral_strview_in_struct.w
//! expect-check-fail: ephemeral values cannot be stored in non-ephemeral structs

type BadToken {
    text: StrView,
}

fn main:
    0
